--- a/platform/tools.mdx
+++ b/platform/tools.mdx
@@ -96,9 +96,9 @@ You can configure multiple transfer routes for different scenarios. The agent wi
 
 #### How It Works
 
-When enabled, the agent can invoke the `transfer_call` function with the destination number. The call will be transferred, and the agent's involvement ends. The transfer appears in the call transcript showing:
+When enabled, the agent can invoke the `transfer_to_number` function with the destination number. The call will be transferred, and the agent's involvement ends. The transfer appears in the call transcript showing:
 
-- Tool invocation: "Tool: transfer_call"
+- Tool invocation: "Tool: transfer_to_number"
 - Destination number
 - Transfer status (success or failure)
 
