--- a/platform/tools.mdx
+++ b/platform/tools.mdx
@@ -329,7 +329,7 @@ The agent will communicate the error to the caller appropriately.
 
 #### Security
 
-- Validate requests are coming from RevRing (verify IP addresses or use signing)
+- Validate requests are coming from RevRing (contact support for HMAC signing setup)
 - Sanitize and validate all input parameters
 - Use HTTPS for all webhook URLs
 - Implement rate limiting to prevent abuse
