--- a/platform/prompting-variables.mdx
+++ b/platform/prompting-variables.mdx
@@ -27,6 +27,7 @@ System variables are automatically available in every call and provide contextua
 | `{{agent_number}}` | Your agent's phone number (caller ID for outbound) | `+12025559999` |
 | `{{current_time}}` | Current timestamp when the call starts, formatted in the agent's timezone | `Tuesday, November 26, 2025 at 2:30:00 PM EST` |
 | `{{timezone}}` | The agent's IANA timezone identifier | `America/New_York` |
+| `{{language}}` | The agent's language code | `en` |
 
 System variables are always available for you to use in your agent's prompt and first message.
 
