--- a/platform/multilingual.mdx
+++ b/platform/multilingual.mdx
@@ -164,7 +164,7 @@ curl -X POST https://api.revring.ai/v1/agents \
     "name": "Asistente en Español",
     "language": "es",
     "voiceId": "revring-pablo",
-    "promptTemplate": "Eres un asistente de servicio al cliente. Ayuda al cliente {{customer_name}} con sus preguntas.",
+    "promptTemplate": "Eres un asistente de servicio al cliente. Ayuda al cliente con sus preguntas.",
     "firstMessage": "Hola, bienvenido. ¿Cómo puedo ayudarte hoy?"
   }'
 ```
@@ -176,7 +176,7 @@ curl -X POST https://api.revring.ai/v1/agents \
    - Voice: Pablo
 3. In **Overview** tab:
    - First Message: "Hola, bienvenido. ¿Cómo puedo ayudarte hoy?"
-   - Prompt: "Eres un asistente de servicio al cliente. Ayuda al cliente {{customer_name}} con sus preguntas."
+   - Prompt: "Eres un asistente de servicio al cliente. Ayuda al cliente con sus preguntas."
 
 <Tip>
 For businesses serving multiple language markets, create separate agents for each language rather than trying to make a single agent multilingual. This ensures the best voice quality and conversation experience.
