--- a/platform/multilingual.mdx
+++ b/platform/multilingual.mdx
@@ -29,10 +29,11 @@ RevRing offers voices in the following languages:
 ### Via Dashboard
 
 1. Navigate to [Agents](https://dashboard.revring.ai/app/agents) and select your agent
-2. Go to the **Voice** tab
-3. Select your desired **Language** from the dropdown
-4. Choose a **Voice** that matches your selected language
-5. Click **Save Voice Settings**
+2. Go to the **Overview** tab
+3. Select your desired **Language** from the dropdown and click **Save**
+4. Go to the **Voice** tab
+5. Choose a **Voice** that matches your selected language
+6. Click **Save Voice Settings**
 
 You can preview all available voices in the [Voice Library](https://dashboard.revring.ai/app/agents/voices).
 
@@ -171,12 +172,12 @@ curl -X POST https://api.revring.ai/v1/agents \
 
 **Via Dashboard:**
 1. Create agent with name "Asistente en Español"
-2. In **Voice** tab:
+2. In **Overview** tab:
    - Language: Spanish
-   - Voice: Pablo
-3. In **Overview** tab:
    - First Message: "Hola, bienvenido. ¿Cómo puedo ayudarte hoy?"
    - Prompt: "Eres un asistente de servicio al cliente. Ayuda al cliente con sus preguntas."
+3. In **Voice** tab:
+   - Voice: Pablo
 
 <Tip>
 For businesses serving multiple language markets, create separate agents for each language rather than trying to make a single agent multilingual. This ensures the best voice quality and conversation experience.
